@@ -14,11 +14,10 @@
 
 $Id$
 """
-
-from AccessControl import ClassSecurityInfo
+from AccessControl.SecurityInfo import ClassSecurityInfo
 from Acquisition import aq_base
-from Globals import DTMLFile
-from Globals import InitializeClass
+from App.class_init import default__class_init__ as InitializeClass
+from App.special_dtml import DTMLFile
 from OFS.SimpleItem import SimpleItem
 from zope.interface import implements
 
@@ -29,12 +28,12 @@ from Products.CMFCore.utils import _checkPermission
 from Products.CMFCore.utils import registerToolInterface
 from Products.CMFCore.utils import UniqueObject
 
-from DiscussionItem import DiscussionItemContainer
-from exceptions import AccessControl_Unauthorized
-from exceptions import DiscussionNotAllowed
-from permissions import ManagePortal
-from permissions import ModifyPortalContent
-from utils import _dtmldir
+from Products.CMFDefault.DiscussionItem import DiscussionItemContainer
+from Products.CMFDefault.exceptions import AccessControl_Unauthorized
+from Products.CMFDefault.exceptions import DiscussionNotAllowed
+from Products.CMFDefault.permissions import ManagePortal
+from Products.CMFDefault.permissions import ModifyPortalContent
+from Products.CMFDefault.utils import _dtmldir
 
 _marker = []
 
