@@ -17,10 +17,10 @@ make it more Portal-friendly.
 $Id$
 """
 
-import OFS.Image
-from AccessControl import ClassSecurityInfo
-from Globals import InitializeClass
+from AccessControl.SecurityInfo import ClassSecurityInfo
+from App.class_init import default__class_init__ as InitializeClass
 from OFS.Cache import Cacheable
+import OFS.Image  # disambiguation
 from zope.component.factory import Factory
 from zope.interface import implements
 
@@ -31,11 +31,11 @@ from Products.CMFCore.utils import _setCacheHeaders
 from Products.CMFCore.utils import _ViewEmulator
 from Products.GenericSetup.interfaces import IDAVAware
 
-from DublinCore import DefaultDublinCoreImpl
-from interfaces import IFile
-from interfaces import IMutableFile
-from permissions import ModifyPortalContent
-from permissions import View
+from Products.CMFDefault.DublinCore import DefaultDublinCoreImpl
+from Products.CMFDefault.interfaces import IFile
+from Products.CMFDefault.interfaces import IMutableFile
+from Products.CMFDefault.permissions import ModifyPortalContent
+from Products.CMFDefault.permissions import View
 
 
 def addFile( self
