@@ -17,10 +17,10 @@ $Id$
 
 import urlparse
 
+from AccessControl.SecurityInfo import ClassSecurityInfo
+from App.class_init import default__class_init__ as InitializeClass
+from App.special_dtml import DTMLFile
 import transaction
-from AccessControl import ClassSecurityInfo
-from Globals import DTMLFile
-from Globals import InitializeClass
 from zope.component.factory import Factory
 from zope.interface import implements
 
@@ -29,15 +29,15 @@ from Products.CMFCore.utils import contributorsplitter
 from Products.CMFCore.utils import keywordsplitter
 from Products.GenericSetup.interfaces import IDAVAware
 
-from DublinCore import DefaultDublinCoreImpl
-from exceptions import ResourceLockedError
-from interfaces import ILink
-from interfaces import IMutableLink
-from permissions import ModifyPortalContent
-from permissions import View
-from utils import _dtmldir
-from utils import formatRFC822Headers
-from utils import parseHeadersBody
+from Products.CMFDefault.DublinCore import DefaultDublinCoreImpl
+from Products.CMFDefault.exceptions import ResourceLockedError
+from Products.CMFDefault.interfaces import ILink
+from Products.CMFDefault.interfaces import IMutableLink
+from Products.CMFDefault.permissions import ModifyPortalContent
+from Products.CMFDefault.permissions import View
+from Products.CMFDefault.utils import _dtmldir
+from Products.CMFDefault.utils import formatRFC822Headers
+from Products.CMFDefault.utils import parseHeadersBody
 
 
 def addLink( self
