@@ -15,23 +15,23 @@
 $Id$
 """
 
-from AccessControl import ClassSecurityInfo
-from Globals import DTMLFile
-from Globals import InitializeClass
-from Globals import PersistentMapping
+from AccessControl.SecurityInfo import ClassSecurityInfo
+from App.class_init import default__class_init__ as InitializeClass
+from App.special_dtml import DTMLFile
 from OFS.Folder import Folder
 from OFS.SimpleItem import SimpleItem
+from Persistence import PersistentMapping
 from zope.interface import implements
 
 from Products.CMFCore.interfaces import IMetadataTool
 from Products.CMFCore.utils import registerToolInterface
 from Products.CMFCore.utils import UniqueObject
 
-from exceptions import MetadataError
-from permissions import ManagePortal
-from permissions import ModifyPortalContent
-from permissions import View
-from utils import _dtmldir
+from Products.CMFDefault.exceptions import MetadataError
+from Products.CMFDefault.permissions import ManagePortal
+from Products.CMFDefault.permissions import ModifyPortalContent
+from Products.CMFDefault.permissions import View
+from Products.CMFDefault.utils import _dtmldir
 
 
 class MetadataElementPolicy( SimpleItem ):
