@@ -17,10 +17,10 @@ $Id$
 
 from warnings import warn
 
-from AccessControl import ClassSecurityInfo
 from AccessControl.requestmethod import postonly
+from AccessControl.SecurityInfo import ClassSecurityInfo
 from Acquisition import aq_base
-from Globals import InitializeClass
+from App.class_init import default__class_init__ as InitializeClass
 from Products.MailHost.interfaces import IMailHost
 from zope.component import getUtility
 from zope.schema import ValidationError
@@ -30,9 +30,9 @@ from Products.CMFCore.RegistrationTool import RegistrationTool as BaseTool
 from Products.CMFCore.utils import _checkPermission
 from Products.CMFCore.utils import getToolByName
 
-from permissions import ManagePortal
-from utils import checkEmailAddress
-from utils import Message as _
+from Products.CMFDefault.permissions import ManagePortal
+from Products.CMFDefault.utils import checkEmailAddress
+from Products.CMFDefault.utils import Message as _
 
 
 class RegistrationTool(BaseTool):
