@@ -15,8 +15,8 @@
 $Id$
 """
 
-from AccessControl import ClassSecurityInfo
-from Globals import InitializeClass
+from AccessControl.SecurityInfo import ClassSecurityInfo
+from App.class_init import default__class_init__ as InitializeClass
 from zope.component.factory import Factory
 from zope.interface import implements
 
@@ -24,9 +24,9 @@ from Products.CMFCore.CMFCatalogAware import CMFCatalogAware
 from Products.CMFCore.interfaces import IContentish
 from Products.CMFCore.PortalFolder import PortalFolder
 
-from DublinCore import DefaultDublinCoreImpl
-from permissions import ModifyPortalContent
-from permissions import View
+from Products.CMFDefault.DublinCore import DefaultDublinCoreImpl
+from Products.CMFDefault.permissions import ModifyPortalContent
+from Products.CMFDefault.permissions import View
 
 
 class SkinnedFolder(CMFCatalogAware, PortalFolder):
