@@ -15,6 +15,8 @@
 $Id$
 """
 
+from AccessControl.SecurityInfo import ClassSecurityInfo
+from App.class_init import default__class_init__ as InitializeClass
 from zope.component import adapts
 from zope.formlib import form
 from zope.interface import implements
